force-app/main/default/objects/OA_Discovered_Organization__c/OA_Discovered_Organization__c.object-meta.xml
<CustomObject>
    <description>Net-new organizations discovered from external sources; canonical org persistence plus qualification result. Auto-Lead-creation stays dormant.</description>
    <label>OA Discovered Organization</label>
    <nameField>
        <displayFormat>ORG-{00000}</displayFormat>
        <label>OA Discovered Organization Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OA Discovered Organizations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>