force-app/main/default/objects/OA_Discovered_Organization__c/fields/CAGE_Code__c.field-meta.xml
<CustomField>
    <fullName>CAGE_Code__c</fullName>
    <label>CAGE Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>