force-app/main/default/objects/OA_Discovered_Organization__c/fields/Canonical_Key__c.field-meta.xml
<CustomField>
    <fullName>Canonical_Key__c</fullName>
    <externalId>true</externalId>
    <label>Canonical Key</label>
    <length>90</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>