force-app/main/default/objects/OA_Discovered_Organization__c/fields/CIK__c.field-meta.xml
<CustomField>
    <fullName>CIK__c</fullName>
    <label>CIK</label>
    <length>15</length>
    <type>Text</type>
</CustomField>