force-app/main/default/objects/OA_Discovered_Organization__c/fields/Discovery_Metadata__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Metadata__c</fullName>
    <label>Discovery Metadata</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>