force-app/main/default/objects/OA_Discovered_Organization__c/fields/Last_Evaluated__c.field-meta.xml
<CustomField>
    <fullName>Last_Evaluated__c</fullName>
    <label>Last Evaluated</label>
    <type>DateTime</type>
</CustomField>