force-app/main/default/objects/OA_Discovered_Organization__c/fields/Matched_Account__c.field-meta.xml
<CustomField>
    <fullName>Matched_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matched Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>OA_Discovered_Organizations</relationshipLabel>
    <relationshipName>OA_Discovered_Organizations</relationshipName>
    <type>Lookup</type>
</CustomField>