force-app/main/default/objects/OA_Discovered_Organization__c/fields/Matched_Lead__c.field-meta.xml
<CustomField>
    <fullName>Matched_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matched Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>OA_Discovered_Organizations</relationshipLabel>
    <relationshipName>OA_Discovered_Organizations</relationshipName>
    <type>Lookup</type>
</CustomField>