force-app/main/default/objects/OA_Discovered_Organization__c/fields/NAICS__c.field-meta.xml
<CustomField>
    <fullName>NAICS__c</fullName>
    <label>NAICS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>