force-app/main/default/objects/OA_Discovered_Organization__c/fields/Normalized_Name__c.field-meta.xml
<CustomField>
    <fullName>Normalized_Name__c</fullName>
    <label>Normalized Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>