force-app/main/default/objects/OA_Discovered_Organization__c/fields/NPI__c.field-meta.xml
<CustomField>
    <fullName>NPI__c</fullName>
    <label>NPI</label>
    <length>15</length>
    <type>Text</type>
</CustomField>