force-app/main/default/objects/OA_Discovered_Organization__c/fields/Qualification_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Reasons__c</fullName>
    <label>Qualification Reasons</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>