force-app/main/default/objects/OA_Discovered_Organization__c/fields/Qualification_Status__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Status__c</fullName>
    <label>Qualification Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>