force-app/main/default/objects/OA_Discovered_Organization__c/fields/Reviewed_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_Contact_Email__c</fullName>
    <description>Reviewer-supplied contact email captured during human approval. Read by OA_LeadCreationService to satisfy the Lead Require_Email_Or_Contact_Person_Email rule at conversion. NEVER auto-populated, NEVER fabricated — set only by a human reviewer (or a future approved contact-resolution source).</description>
    <label>Reviewed Contact Email</label>
    <type>Email</type>
</CustomField>