force-app/main/default/objects/OA_Discovered_Organization__c/fields/Source_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Source_Confidence__c</fullName>
    <label>Source Confidence</label>
    <length>10</length>
    <type>Text</type>
</CustomField>