force-app/main/default/objects/OA_Discovered_Organization__c/fields/Source_Payload_Hash__c.field-meta.xml
<CustomField>
    <fullName>Source_Payload_Hash__c</fullName>
    <label>Source Payload Hash</label>
    <length>64</length>
    <type>Text</type>
</CustomField>