force-app/main/default/objects/OA_Discovered_Organization__c/fields/UEI__c.field-meta.xml
<CustomField>
    <fullName>UEI__c</fullName>
    <label>UEI</label>
    <length>12</length>
    <type>Text</type>
</CustomField>